[package]
name = "mjpeg-avi-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["fs", "io-util"], optional = true }

[dev-dependencies]
image = "0.24"
futures-executor = "0.3"
tokio = { version = "1.0", features = ["macros", "rt", "fs"] }
tokio-test = "0.4"

[features]
default = []
async = ["futures"]
tokio = ["dep:tokio"]
